ext/qiita_marker/qfm_scanners.c
/* Generated by re2c 1.3 */

#include "qfm_scanners.h"
#include <stdlib.h>

bufsize_t _qfm_scan_at(bufsize_t (*scanner)(const unsigned char *),
                       unsigned char *ptr, int len, bufsize_t offset) {
  bufsize_t res;

  if (ptr == NULL || offset >= len) {
    return 0;
  } else {
    unsigned char lim = ptr[len];

    ptr[len] = '\0';
    res = scanner(ptr + offset);
    ptr[len] = lim;
  }

  return res;
}

// Scan an opening qfm_custom_block fence.
bufsize_t _scan_open_qfm_custom_block_fence(const unsigned char *p) {
  const unsigned char *marker = NULL;
  const unsigned char *start = p;

  {
    unsigned char yych;
    static const unsigned char yybm[] = {
        0,   128, 128, 128, 128, 128, 128, 128, 128, 128, 0,   128, 128, 0,
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        128, 128, 64,  128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        128, 128, 0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
        0,   0,   0,   0,
    };
    yych = *p;
    if (yych == ':')
      goto yy4;
    ++p;
  yy3 : { return 0; }
  yy4:
    yych = *(marker = ++p);
    if (yych != ':')
      goto yy3;
    yych = *++p;
    if (yybm[0 + yych] & 64) {
      goto yy7;
    }
  yy6:
    p = marker;
    goto yy3;
  yy7:
    yych = *++p;
    if (yybm[0 + yych] & 64) {
      goto yy7;
    }
    if (yych <= 0xDF) {
      if (yych <= '\f') {
        if (yych <= 0x00)
          goto yy6;
        if (yych == '\n') {
          marker = p;
          goto yy11;
        }
        marker = p;
      } else {
        if (yych <= '\r') {
          marker = p;
          goto yy11;
        }
        if (yych <= 0x7F) {
          marker = p;
          goto yy9;
        }
        if (yych <= 0xC1)
          goto yy6;
        marker = p;
        goto yy13;
      }
    } else {
      if (yych <= 0xEF) {
        if (yych <= 0xE0) {
          marker = p;
          goto yy14;
        }
        if (yych == 0xED) {
          marker = p;
          goto yy16;
        }
        marker = p;
        goto yy15;
      } else {
        if (yych <= 0xF0) {
          marker = p;
          goto yy17;
        }
        if (yych <= 0xF3) {
          marker = p;
          goto yy18;
        }
        if (yych <= 0xF4) {
          marker = p;
          goto yy19;
        }
        goto yy6;
      }
    }
  yy9:
    yych = *++p;
    if (yybm[0 + yych] & 128) {
      goto yy9;
    }
    if (yych <= 0xEC) {
      if (yych <= 0xC1) {
        if (yych <= 0x00)
          goto yy6;
        if (yych >= 0x0E)
          goto yy6;
      } else {
        if (yych <= 0xDF)
          goto yy13;
        if (yych <= 0xE0)
          goto yy14;
        goto yy15;
      }
    } else {
      if (yych <= 0xF0) {
        if (yych <= 0xED)
          goto yy16;
        if (yych <= 0xEF)
          goto yy15;
        goto yy17;
      } else {
        if (yych <= 0xF3)
          goto yy18;
        if (yych <= 0xF4)
          goto yy19;
        goto yy6;
      }
    }
  yy11:
    ++p;
    p = marker;
    { return (bufsize_t)(p - start); }
  yy13:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy6;
    if (yych <= 0xBF)
      goto yy9;
    goto yy6;
  yy14:
    yych = *++p;
    if (yych <= 0x9F)
      goto yy6;
    if (yych <= 0xBF)
      goto yy13;
    goto yy6;
  yy15:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy6;
    if (yych <= 0xBF)
      goto yy13;
    goto yy6;
  yy16:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy6;
    if (yych <= 0x9F)
      goto yy13;
    goto yy6;
  yy17:
    yych = *++p;
    if (yych <= 0x8F)
      goto yy6;
    if (yych <= 0xBF)
      goto yy15;
    goto yy6;
  yy18:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy6;
    if (yych <= 0xBF)
      goto yy15;
    goto yy6;
  yy19:
    yych = *++p;
    if (yych <= 0x7F)
      goto yy6;
    if (yych <= 0x8F)
      goto yy15;
    goto yy6;
  }
}

// Scan a closing qfm_custom_block fence with length at least len.
bufsize_t _scan_close_qfm_custom_block_fence(const unsigned char *p) {
  const unsigned char *marker = NULL;
  const unsigned char *start = p;

  {
    unsigned char yych;
    static const unsigned char yybm[] = {
        0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0,   0, 0, 0, 0,  0, 0, 0, 0, 0, 0, 0,
        0, 0, 0, 0, 0, 0, 0, 0, 0, 0,   128, 0, 0, 0, 0,  0, 0, 0, 0, 0, 0, 0,
        0, 0, 0, 0, 0, 0, 0, 0, 0, 0,   0,   0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 0,
        0, 0, 0, 0, 0, 0, 0, 0, 0, 0,   0,   0, 0, 0, 0,  0, 0, 0, 0, 0, 0, 0,
        0, 0, 0, 0, 0, 0, 0, 0, 0, 0,   0,   0, 0, 0, 0,  0, 0, 0, 0, 0, 0, 0,
        0, 0, 0, 0, 0, 0, 0, 0, 0, 0,   0,   0, 0, 0, 0,  0, 0, 0, 0, 0, 0, 0,
        0, 0, 0, 0, 0, 0, 0, 0, 0, 0,   0,   0, 0, 0, 0,  0, 0, 0, 0, 0, 0, 0,
        0, 0, 0, 0, 0, 0, 0, 0, 0, 0,   0,   0, 0, 0, 0,  0, 0, 0, 0, 0, 0, 0,
        0, 0, 0, 0, 0, 0, 0, 0, 0, 0,   0,   0, 0, 0, 0,  0, 0, 0, 0, 0, 0, 0,
        0, 0, 0, 0, 0, 0, 0, 0, 0, 0,   0,   0, 0, 0, 0,  0, 0, 0, 0, 0, 0, 0,
        0, 0, 0, 0, 0, 0, 0, 0, 0, 0,   0,   0, 0, 0, 0,  0, 0, 0, 0, 0, 0, 0,
        0, 0, 0, 0, 0, 0, 0, 0, 0, 0,   0,   0, 0, 0,
    };
    yych = *p;
    if (yych == ':')
      goto yy24;
    ++p;
  yy23 : { return 0; }
  yy24:
    yych = *(marker = ++p);
    if (yych != ':')
      goto yy23;
    yych = *++p;
    if (yybm[0 + yych] & 64) {
      goto yy27;
    }
  yy26:
    p = marker;
    goto yy23;
  yy27:
    yych = *++p;
    if (yybm[0 + yych] & 64) {
      goto yy27;
    }
    if (yych <= '\f') {
      if (yych <= 0x08)
        goto yy26;
      if (yych <= '\t') {
        marker = p;
        goto yy29;
      }
      if (yych <= '\n') {
        marker = p;
        goto yy31;
      }
      goto yy26;
    } else {
      if (yych <= '\r') {
        marker = p;
        goto yy31;
      }
      if (yych != ' ')
        goto yy26;
      marker = p;
    }
  yy29:
    yych = *++p;
    if (yybm[0 + yych] & 128) {
      goto yy29;
    }
    if (yych <= 0x08)
      goto yy26;
    if (yych <= '\n')
      goto yy31;
    if (yych != '\r')
      goto yy26;
  yy31:
    ++p;
    p = marker;
    { return (bufsize_t)(p - start); }
  }
}
